--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="col-lg-12 my-auto">
-                        <button class="btn btn-primary btn-xl" onclick="index.html">Start now</button><br>
+                        <button class="btn btn-primary btn-xl" type="button" onclick="window.location.href='home.html'">Start now</button><br>
                         <div id="mc_embed_signup">
                             <form action="https://carlosshb.us18.list-manage.com/subscribe/post?u=96e4ff150fd6480d4706678f2&amp;id=db8574bb7e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
