--- a/gallery.html
+++ b/gallery.html
@@ -106,12 +106,7 @@
 
             <!--Call to action-->
             <div class="pt-4">
-                <a class="btn btn-outline-white" href="https://mdbootstrap.com/getting-started/" target="_blank" role="button">Download MDB
-                    <i class="fa fa-download ml-2"></i>
-                </a>
-                <a class="btn btn-outline-white" href="https://mdbootstrap.com/bootstrap-tutorial/" target="_blank" role="button">Start free tutorial
-                    <i class="fa fa-graduation-cap ml-2"></i>
-                </a>
+                <h2>“Without music, life would be a mistake” ― Friedrich Nietzsche.</h2>
             </div>
             <!--/.Call to action-->
 
