--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
 
                 <!--First slide-->
                 <div class="carousel-item active">
-                    <div class="view" style="background-image: url('img/champions.jpg'); background-repeat: no-repeat; background-size: cover;">
+                    <div class="view" style="background-image: url('ucl.png'); background-repeat: no-repeat; background-size: cover;">
 
                         <!-- Mask & flexbox options-->
                         <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
@@ -139,7 +139,7 @@
 
                 <!--Second slide-->
                 <div class="carousel-item">
-                    <div class="view" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/47.jpg'); background-repeat: no-repeat; background-size: cover;">
+                    <div class="view" style="background-image: url('2018wc.jpg'); background-repeat: no-repeat; background-size: cover;">
 
                         <!-- Mask & flexbox options-->
                         <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
@@ -147,19 +147,18 @@
                             <!-- Content -->
                             <div class="text-center white-text mx-5 wow fadeIn">
                                 <h1 class="mb-4">
-                                    <strong>Learn Bootstrap 4 with MDB</strong>
+                                    <strong>FIFA 2018 Russia World Cup</strong>
                                 </h1>
 
                                 <p>
-                                    <strong>Best & free guide of responsive web design</strong>
+                                    <strong>The biggest event in the World has finally arrived... and gone!</strong>
                                 </p>
 
                                 <p class="mb-4 d-none d-md-block">
-                                    <strong>The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and written versions
-                                        available. Create your own, stunning website.</strong>
+                                    <strong>The 4-year wait has ended and the Champion has taken his Trophy, come here and find out who is it.</strong>
                                 </p>
 
-                                <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial
+                                <a target="_blank" href="https://es.fifa.com/worldcup/" class="btn btn-outline-white btn-lg">Start free tutorial
                                     <i class="fa fa-graduation-cap ml-2"></i>
                                 </a>
                             </div>
@@ -246,8 +245,9 @@
                                     <i class="fa fa-code fa-2x indigo-text"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h5 class="feature-title">Bootstrap 4</h5>
-                                    <p class="grey-text">Thanks to MDB you can take advantage of all feature of newest Bootstrap 4.</p>
+                                    <h5 class="feature-title">Engineering student</h5>
+                                    <p class="grey-text">Telecommunications engineering at 
+                                    Universidad de Carabobo. Currently at 6th semester.</p>
                                 </div>
                             </div>
                             <!--/First row-->
@@ -260,9 +260,9 @@
                                     <i class="fa fa-book fa-2x blue-text"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h5 class="feature-title">Detailed documentation</h5>
-                                    <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help you to implement your ideas
-                                        easily.
+                                    <h5 class="feature-title">Backend Developer</h5>
+                                    <p class="grey-text">Worked with PHP's framework: Symfony, Java, 
+                                        MySQL, Docker. Currently learning HTML5, CSS3, Bootstrap and Javascript.
                                     </p>
                                 </div>
                             </div>
@@ -276,9 +276,10 @@
                                     <i class="fa fa-graduation-cap fa-2x cyan-text"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h5 class="feature-title">Lots of tutorials</h5>
-                                    <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials, which allow you to learn
-                                        how to use MDB as well as other technologies.</p>
+                                    <h5 class="feature-title">Music lover</h5>
+                                    <p class="grey-text">Love Coldplay, Caramelos de Cianuro, Bastille, 
+                                    The Chainsmokers, twenty one pilots and a long among other. My dream 
+                                    is learning to play the piano.</p>
                                 </div>
                             </div>
                             <!--/Third row-->
@@ -310,12 +311,7 @@
 
             <!--Call to action-->
             <div class="pt-4">
-                <a class="btn btn-outline-white" href="https://mdbootstrap.com/getting-started/" target="_blank" role="button">Download MDB
-                    <i class="fa fa-download ml-2"></i>
-                </a>
-                <a class="btn btn-outline-white" href="https://mdbootstrap.com/bootstrap-tutorial/" target="_blank" role="button">Start free tutorial
-                    <i class="fa fa-graduation-cap ml-2"></i>
-                </a>
+                <h1>“Without music, life would be a mistake” ― Friedrich Nietzsche.</h1>
             </div>
             <!--/.Call to action-->
 
