Little by little

--- a/home.html
+++ b/home.html
@@ -125,7 +125,6 @@
                                 </p>
 
                                 <a target="_blank" href="https://es.uefa.com/uefachampionsleague/index.html" class="btn btn-outline-white btn-lg">Find more info here
-                                    <i class="fa fa-graduation-cap ml-2"></i>
                                 </a>
                             </div>
                             <!-- Content -->
@@ -159,7 +158,6 @@
                                 </p>
 
                                 <a target="_blank" href="https://es.fifa.com/worldcup/" class="btn btn-outline-white btn-lg">Start free tutorial
-                                    <i class="fa fa-graduation-cap ml-2"></i>
                                 </a>
                             </div>
                             <!-- Content -->
@@ -194,7 +192,6 @@
                                 </p>
 
                                 <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial
-                                    <i class="fa fa-graduation-cap ml-2"></i>
                                 </a>
                             </div>
                             <!-- Content -->
@@ -242,10 +239,9 @@
                             <!--First row-->
                             <div class="row">
                                 <div class="col-1 mr-3">
-                                    <i class="fa fa-code fa-2x indigo-text"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h5 class="feature-title">Engineering student</h5>
+                                    <strong><h5 class="feature-title">Engineering student</h5></strong>
                                     <p class="grey-text">Telecommunications engineering at 
                                     Universidad de Carabobo. Currently at 6th semester.</p>
                                 </div>
@@ -257,10 +253,9 @@
                             <!--Second row-->
                             <div class="row">
                                 <div class="col-1 mr-3">
-                                    <i class="fa fa-book fa-2x blue-text"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h5 class="feature-title">Backend Developer</h5>
+                                    <strong><h5 class="feature-title">Backend Developer</h5></strong>
                                     <p class="grey-text">Worked with PHP's framework: Symfony, Java, 
                                         MySQL, Docker. Currently learning HTML5, CSS3, Bootstrap and Javascript.
                                     </p>
@@ -273,10 +268,9 @@
                             <!--Third row-->
                             <div class="row">
                                 <div class="col-1 mr-3">
-                                    <i class="fa fa-graduation-cap fa-2x cyan-text"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h5 class="feature-title">Music lover</h5>
+                                    <strong><h5 class="feature-title">Music lover</h5></strong>
                                     <p class="grey-text">Love Coldplay, Caramelos de Cianuro, Bastille, 
                                     The Chainsmokers, twenty one pilots and a long among other. My dream 
                                     is learning to play the piano.</p>
@@ -311,7 +305,7 @@
 
             <!--Call to action-->
             <div class="pt-4">
-                <h1>“Without music, life would be a mistake” ― Friedrich Nietzsche.</h1>
+                <h2>“Without music, life would be a mistake” ― Friedrich Nietzsche.</h2>
             </div>
             <!--/.Call to action-->
 
