Added 'My favorite songs'

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
                 }
             }
         </style>
-        <link href="landing.css" rel="stylesheet">
+        <link href="gallery.css" rel="stylesheet">
     </head>
     <body>
         <!-- Navbar -->
@@ -58,7 +58,7 @@
                             <a class="nav-link" href="gallery.html" >Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">My favorite songs</a>
+                            <a class="nav-link" href="favorite.html">My favorite songs</a>
                         </li>
                     </ul>
 
