--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                             <a class="nav-link" href="gallery.html" >Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">My favorite songs</a>
+                            <a class="nav-link" href="favorite.html">My favorite songs</a>
                         </li>
                     </ul>
 
@@ -179,11 +179,11 @@
                             <!-- Content -->
                             <div class="text-center white-text mx-5 wow fadeIn">
                                 <h1 class="mb-4">
-                                    <strong>Learn Bootstrap 4 with MDB</strong>
+                                    <strong>Know more about my favorite band</strong>
                                 </h1>
 
                                 <p>
-                                    <strong>Best & free guide of responsive web design</strong>
+                                    <strong>Coldplay</strong>
                                 </p>
 
                                 <p class="mb-4 d-none d-md-block">
