--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">About me</a>
+                            <a class="nav-link" href="about.html">About me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="gallery.html" >Gallery</a>
