--- a/complex.html
+++ b/complex.html
@@ -100,40 +100,31 @@
 
                     <span class="form-group">
                         <label for="exampleInputEmail1">Re(z1)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" >
+                        <input id="rez1" type="text" class="form-control"  >
                     </span>
                     <span class="form-group">
                         <label for="exampleInputEmail1">Im(z1)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" >
+                        <input id="imz1" type="text" class="form-control"  >
                     </span>
                 </div>
                 <div class="complex-number">
                     <h3><b>Complex 2</b></h3>
                     <span class="form-group">
                         <label for="exampleInputEmail1">Re(z2)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" >
+                        <input id="rez2" type="text" class="form-control"  >
                     </span>
                     <span class="form-group">
                         <label for="exampleInputEmail1">Im(z2)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" >
+                        <input id="imz2" type="text" class="form-control"  >
                     </span>                        
                 </div>
                 <div class="complex-number">
                     <h3><b>Results</b></h3>
-                    <h5 class="h5 text-center mb-5" >Forma binómica: </h5>
-                    <h5 class="h5 text-center mb-5" ></h5>
-                    <h5 class="h5 text-center mb-5" >Forma fasorial: </h5>
-                    <h5 class="h5 text-center mb-5" ></h5>
+                    <h5 class="h5 text-center mb-5" id ="binomicaResult"></h5>
+                    <h5 class="h5 text-center mb-5" id ="fasorialResult"></h5>
                 </div>
 
-                <div>                                                    
-                    <button id="clear" type="submit" class="btn btn-primary">Clear                                
-                        <i class="fa fa-image ml-1"></i>
-                    </button>
-                    <button id="clear" type="submit" class="btn btn-primary">Clear                                
-                        <i class="fa fa-image ml-1"></i>
-                    </button>
-                                    </div>
+                                                                          
 
                 <span class="container">
 
@@ -141,6 +132,9 @@
                     <button id ="subtraction" type="submit" class="btn btn-primary">-</button>
                     <button id="product" type="submit" class="btn btn-primary">x</button>
                     <button id="division" type="submit" class="btn btn-primary">/</button>
+                    <button id="clear" type="submit" class="btn btn-primary">Clear                                
+                        <span class="close"></span>
+                    </button>
                 </span>
 
 
@@ -203,6 +197,8 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="js/mdb.min.js"></script>
+        <!-- Complex js script -->
+        <script type="text/javascript" src="complex.js"></script>
         <!-- Initializations -->
         <script type="text/javascript">
             // Animations initialization
