Almost finished script and 'About' page advances

--- a/complex.html
+++ b/complex.html
@@ -129,11 +129,10 @@
                 <span class="container">
 
                     <button id="sum" type="submit" class="btn btn-primary">+</button>
-                    <button id ="subtraction" type="submit" class="btn btn-primary">-</button>
+                    <button id ="substraction" type="submit" class="btn btn-primary">-</button>
                     <button id="product" type="submit" class="btn btn-primary">x</button>
-                    <button id="division" type="submit" class="btn btn-primary">/</button>
+                    <button id="division" type="submit" class="btn btn-primary">÷</button>
                     <button id="clear" type="submit" class="btn btn-primary">Clear                                
-                        <span class="close"></span>
                     </button>
                 </span>
 
