--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Home | Carlos Hernández</title>
         <!-- Font Awesome -->
@@ -26,7 +26,7 @@
 
     <body>
         <!-- Navbar -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+        <nav id ="nav" class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <div class="container">
 
                 <!-- Brand -->
