Advances and calculator script refactored

--- a/about.html
+++ b/about.html
@@ -111,18 +111,23 @@
 
                             <!-- Main heading -->
                             <h3 class="h3 mb-3">Carlos Samuel Hernández Blanco</h3>
-                            <p>This template is created with Material Design for Bootstrap (
-                                <strong>MDB</strong> ) framework.</p>
-                            <p>Read details below to learn more about MDB.</p>
+                            <p>I was born on 
+                                <strong>February 13th, 1998</strong> in 
+                                <strong>Venezuela</strong>.</p>
+                            <p>Was raised my whole life in my birth country until the the moment
+                            this page was created. In <strong>October 2015</strong>, I began my career, 
+                            which is <strong>Telecommunications Engineering at 'Universidad de Carabobo'</strong>. 
+                            There, it's how my love for programming began. I was in the 
+                            <strong>3rd semester</strong> and was having the Programming I subject. 
+                            Since then, my passion started growing more and more. In <strong>2018</strong>, 
+                            I got my first job as a <strong>Web developer</strong> and my knowledges haven't stopped
+                            since then.</p>
                             <!-- Main heading -->
 
                             <hr>
 
                             <p>
-                                <strong>400+</strong> material UI elements,
-                                <strong>600+</strong> material icons,
-                                <strong>74</strong> CSS animations, SASS files, templates, tutorials and many more.
-                                <strong>Free for personal and commercial use.</strong>
+                                <strong>Read more about me by clicking in the following buttons:</strong>
                             </p>
 
                             <!-- CTA -->
