--- a/complex.html
+++ b/complex.html
@@ -92,7 +92,7 @@
         <main class="mt-5 pt-5">
             <h3 class="h3 text-center mb-5">Complex numbers calculator</h3>
 
-            <div class="container">
+            <div class="container" id="calculator">
 
 
                 <div class="complex-number">
@@ -118,13 +118,13 @@
                         <input id="imz2" type="text" class="form-control"  >
                     </span>                        
                 </div>
-                <div class="complex-number">
+                <div>
                     <h3><b>Results</b></h3>
                     <h5 class="h5 text-center mb-5" id ="binomicaResult"></h5>
                     <h5 class="h5 text-center mb-5" id ="fasorialResult"></h5>
                 </div>
 
-                                                                          
+
 
                 <span class="container">
 
