--- a/home.html
+++ b/home.html
@@ -106,14 +106,15 @@
                 <section class="pt-5">
 
                     <!-- Heading & Description -->
-                    <div class="wow fadeIn">
+                    <div class="wow fadeIn" id="welcome-div">
 
                         <img src="welcome.jpg" class="welcome-image">
 
-
-                        <!--Section description-->
-                        <p class="text-center"><strong>Hi! My name is Carlos Hernandez and this is my page. Why don't you come 
-                                and visit me?</strong></p>
+                        <div class="center">
+                            <!--Section description-->
+                            <p class="text-center"><strong>Hi! My name is Carlos Hernandez and this is my page. Why don't you come 
+                                    and visit me?</strong></p>
+                        </div>
                     </div>
                     <!-- Heading & Description -->
                     <hr class="mb-5">
@@ -188,7 +189,7 @@
                         <!--Grid column-->
                         <div class="col-lg-5 col-xl-4 mb-4">
                             <!--Featured image-->
-                                <img  src="beatles.jpeg" class="img-fluid" alt="">
+                            <img  src="beatles.jpeg" class="img-fluid" alt="">
                         </div>
                         <!--Grid column-->
 
@@ -207,6 +208,42 @@
 
                     </div>
                     <!--Grid row-->
+
+                    <hr class="mb-5">
+
+
+                    <!--Grid row-->
+                    <div class="row mt-3 wow fadeIn">
+
+                        <!--Grid column-->
+                        <div class="col-lg-5 col-xl-4 mb-4">
+                            <!--Featured image-->
+                            <img src="calculator.png" class="img-fluid" alt="">
+                            <a href="about.html">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+
+                        <!--Grid column-->
+                        <div class="col-lg-7 col-xl-7 ml-xl-4 mb-4">
+                            <h3 class="mb-3 font-weight-bold dark-grey-text">
+                                <strong>My complex numbers calculator</strong>
+                            </h3>
+                            <p class="grey-text">Sum, substract, multiply and divide complex numbers.
+                            This calculator was made by me with knowledges adquired in my career 
+                            and was made in order to ease such operations studying advanced subjects
+                            such as Electric Circuits</p>
+                            <a href="gallery.html"class="btn btn-primary btn-md">Begin                               
+
+                            </a>
+
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+
 
                 </section>
                 <!--Section: Cards-->
