--- a/about.html
+++ b/about.html
@@ -131,11 +131,11 @@
                             </p>
 
                             <!-- CTA -->
-                            <a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-grey btn-md">Download
-                                <i class="fa fa-download ml-1"></i>
+                            <a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-grey btn-md">Education
                             </a>
-                            <a target="_blank" href="https://mdbootstrap.com/components/" class="btn btn-grey btn-md">Live demo
-                                <i class="fa fa-image ml-1"></i>
+                            <a target="_blank" href="https://mdbootstrap.com/components/" class="btn btn-grey btn-md">Skills
+                            </a>
+                            <a target="_blank" href="https://mdbootstrap.com/components/" class="btn btn-grey btn-md">Work Experience
                             </a>
 
                         </div>
