--- a/complex.html
+++ b/complex.html
@@ -93,35 +93,46 @@
             <h3 class="h3 text-center mb-5">Complex numbers calculator</h3>
 
             <div class="container" id="calculator">
+                <div class="row features-small mb-5 mt-3 wow fadeIn">
 
+                    <div class="col-md-4">
 
-                <div class="complex-number">
-                    <h3><b>Complex 1</b></h3>
+                        <div class="complex-number">
+                            <h4><b>Complex 1</b></h4>
 
-                    <span class="form-group">
-                        <label for="exampleInputEmail1">Re(z1)</label>
-                        <input id="rez1" type="text" class="form-control"  >
-                    </span>
-                    <span class="form-group">
-                        <label for="exampleInputEmail1">Im(z1)</label>
-                        <input id="imz1" type="text" class="form-control"  >
-                    </span>
-                </div>
-                <div class="complex-number">
-                    <h3><b>Complex 2</b></h3>
-                    <span class="form-group">
-                        <label for="exampleInputEmail1">Re(z2)</label>
-                        <input id="rez2" type="text" class="form-control"  >
-                    </span>
-                    <span class="form-group">
-                        <label for="exampleInputEmail1">Im(z2)</label>
-                        <input id="imz2" type="text" class="form-control"  >
-                    </span>                        
-                </div>
-                <div>
-                    <h3><b>Results</b></h3>
-                    <h5 class="h5 text-center mb-5" id ="binomicaResult"></h5>
-                    <h5 class="h5 text-center mb-5" id ="fasorialResult"></h5>
+                            <span class="form-group">
+                                <label for="exampleInputEmail1">Re(z1)</label>
+                                <input id="rez1" type="text" class="form-control"  >
+                            </span>
+                            <span class="form-group">
+                                <label for="exampleInputEmail1">Im(z1)</label>
+                                <input id="imz1" type="text" class="form-control"  >
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+
+                        <div class="complex-number">
+                            <h4><b>Complex 2</b></h4>
+                            <span class="form-group">
+                                <label for="exampleInputEmail1">Re(z2)</label>
+                                <input id="rez2" type="text" class="form-control"  >
+                            </span>
+                            <span class="form-group">
+                                <label for="exampleInputEmail1">Im(z2)</label>
+                                <input id="imz2" type="text" class="form-control"  >
+                            </span>                        
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+
+                        <div>
+                            <h4><b>Results</b></h4>
+                            <h5 class="h5 text-center mb-5" id ="binomicaResult"></h5>
+                            <h5 class="h5 text-center mb-5" id ="fasorialResult"></h5>
+                        </div>
+                    </div>
                 </div>
 
 
