--- a/complex.html
+++ b/complex.html
@@ -90,64 +90,143 @@
 
         <!--Main layout-->
         <main class="mt-5 pt-5">
-            <h3 class="h3 text-center mb-5">Complex numbers calculator</h3>
+            <div class="operations">
+                <h3 class="h3 text-center mb-5">Binomial to fasorial</h3>
 
-            <div class="container" id="calculator">
-                <div class="row features-small mb-5 mt-3 wow fadeIn">
+                <div class="container">
+                    <div class="row features-small mb-5 mt-3 wow fadeIn">
 
-                    <div class="col-md-4">
+                        <div class="col-md-4">
 
-                        <div class="complex-number">
-                            <h4><b>Complex 1</b></h4>
+                            <div class="complex-number">
+                                <h4><b>Complex</b></h4>
 
-                            <span class="form-group">
-                                <label for="exampleInputEmail1">Re(z1)</label>
-                                <input id="rez1" type="text" class="form-control"  >
-                            </span>
-                            <span class="form-group">
-                                <label for="exampleInputEmail1">Im(z1)</label>
-                                <input id="imz1" type="text" class="form-control"  >
-                            </span>
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">Re(z)</label>
+                                    <input id="rez" type="text" class="form-control"  >
+                                </span>
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">Im(z)</label>
+                                    <input id="imz" type="text" class="form-control"  >
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
 
-                        <div class="complex-number">
-                            <h4><b>Complex 2</b></h4>
-                            <span class="form-group">
-                                <label for="exampleInputEmail1">Re(z2)</label>
-                                <input id="rez2" type="text" class="form-control"  >
-                            </span>
-                            <span class="form-group">
-                                <label for="exampleInputEmail1">Im(z2)</label>
-                                <input id="imz2" type="text" class="form-control"  >
-                            </span>                        
+
+                        <div class="col-md-4">
+
+                            <div>
+                                <h4><b>Result</b></h4>
+                                <h5 class="h5 text-center mb-5" id ="binTransResult"></h5>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <span class="container">
 
-                        <div>
-                            <h4><b>Results</b></h4>
-                            <h5 class="h5 text-center mb-5" id ="binomicaResult"></h5>
-                            <h5 class="h5 text-center mb-5" id ="fasorialResult"></h5>
-                        </div>
-                    </div>
+                        <button id="binToFasBtn" type="submit" class="btn btn-primary">Transform</button>
+                    </span>
+
                 </div>
+            </div>
+            <div class="operations">
+                <h3 class="h3 text-center mb-5">Fasorial to binomial</h3>
+
+                <div class="container">
+                    <div class="row features-small mb-5 mt-3 wow fadeIn">
+
+                        <div class="col-md-4">
+
+                            <div class="complex-number">
+                                <h4><b>Complex</b></h4>
+
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">|z|</label>
+                                    <input id="modz" type="text" class="form-control"  >
+                                </span>
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">Arg(z)</label>
+                                    <input id="argz" type="text" class="form-control"  >
+                                </span>
+                            </div>
+                        </div>
+
+
+                        <div class="col-md-4">
+
+                            <div>
+                                <h4><b>Result</b></h4>
+                                <h5 class="h5 text-center mb-5" id ="fasTransResult"></h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <span class="container">
+
+                        <button id="fasToBinBtn" type="submit" class="btn btn-primary">Transform</button>
+                    </span>
+
+                </div>
+            </div>
+            
+            <div class="operations">
+                <h3 class="h3 text-center mb-5">Complex numbers calculator</h3>
+
+                <div class="container" >
+                    <div class="row features-small mb-5 mt-3 wow fadeIn">
+
+                        <div class="col-md-4">
+
+                            <div class="complex-number">
+                                <h4><b>Complex 1</b></h4>
+
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">Re(z1)</label>
+                                    <input id="rez1" type="text" class="form-control"  >
+                                </span>
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">Im(z1)</label>
+                                    <input id="imz1" type="text" class="form-control"  >
+                                </span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+
+                            <div class="complex-number">
+                                <h4><b>Complex 2</b></h4>
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">Re(z2)</label>
+                                    <input id="rez2" type="text" class="form-control"  >
+                                </span>
+                                <span class="form-group">
+                                    <label for="exampleInputEmail1">Im(z2)</label>
+                                    <input id="imz2" type="text" class="form-control"  >
+                                </span>                        
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <div>
+                                <h4><b>Results</b></h4>
+                                <h5 class="h5 text-center mb-5" id ="binomicaResult"></h5>
+                                <h5 class="h5 text-center mb-5" id ="fasorialResult"></h5>
+                            </div>
+                        </div>
+                    </div>
 
 
 
-                <span class="container">
+                    <span class="container">
 
-                    <button id="sum" type="submit" class="btn btn-primary">+</button>
-                    <button id ="substraction" type="submit" class="btn btn-primary">-</button>
-                    <button id="product" type="submit" class="btn btn-primary">x</button>
-                    <button id="division" type="submit" class="btn btn-primary">÷</button>
-                    <button id="clear" type="submit" class="btn btn-primary">Clear                                
-                    </button>
-                </span>
+                        <button id="sum" type="submit" class="btn btn-primary">+</button>
+                        <button id ="substraction" type="submit" class="btn btn-primary">-</button>
+                        <button id="product" type="submit" class="btn btn-primary">x</button>
+                        <button id="division" type="submit" class="btn btn-primary">÷</button>
+                        <button id="clear" type="submit" class="btn btn-primary">Clear</button>
+                    </span>
 
-
+                </div>
             </div>
         </main>
         <!--Main layout-->
