--- a/favorite.html
+++ b/favorite.html
@@ -6,14 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>My favorite songs | Carlos Hernández</title>
-        <!-- Font Awesome -->
+         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <!-- Material Design Bootstrap -->
         <link href="css/mdb.min.css" rel="stylesheet">
         <!-- Your custom styles (optional) -->
         <link href="css/style.min.css" rel="stylesheet">
+        <!-- Icon -->
+        <link rel ="icon" type="image/png" href="C.png" />
         <style type="text/css">
             @media (min-width: 800px) and (max-width: 850px) {
                 .navbar:not(.top-nav-collapse) {
@@ -78,7 +82,7 @@
                         <li class="nav-item">
                             <a href="https://github.com/Carls13" class="nav-link border border-light rounded"
                                target="_blank">
-                                <i class="fa fa-github mr-2">CARLS13</i>
+                                <i class="fa fa-github mr-2"> Carls13</i>
                             </a>
                         </li>
                     </ul>
@@ -148,7 +152,7 @@
             </div>
             <!--/.Call to action-->
 
-            <hr class="my-4">
+             <hr class="my-4">
 
             <!-- Social icons -->
             <div class="pb-4">
