--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,10 @@
         <link href="css/mdb.min.css" rel="stylesheet">
         <!-- Your custom styles (optional) -->
         <link href="css/style.min.css" rel="stylesheet">
+         <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
+        <!-- Icon -->
+        <link rel ="icon" type="image/png" href="C.png" />
         <style type="text/css">
             @media (min-width: 800px) and (max-width: 850px) {
                 .navbar:not(.top-nav-collapse) {
@@ -77,7 +81,7 @@
                         <li class="nav-item">
                             <a href="https://github.com/Carls13" class="nav-link border border-light rounded"
                                target="_blank">
-                                <i class="fa fa-github mr-2">CARLS13</i>
+                                <i class="fa fa-github mr-2"> Carls13</i>
                             </a>
                         </li>
                     </ul>
