--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Carlos Hernandez</title>
-
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <title>Carlos Hernández</title>
+        <meta charset="utf-8">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
 
         <!-- Note that the below Bootstrap file is a specific version. If you grab the most
         current from Bootstrap website, you will see the button grow transition being a lot faster
@@ -14,6 +14,9 @@
 
         <!-- My own stylesheet -->
         <link href="landing.css" rel="stylesheet">
+        
+        <!-- Icon -->
+        <link rel ="icon" type="image/png" href="C.png" />
     </head>
     <body>
         <header class="startup text-center text-white d-flex">
@@ -21,22 +24,22 @@
                 <div class="row">
                     <div class="col-lg-12 my-auto">
                         <h1 class="text-uppercase faded">
-                            <strong>Carlos Hernandez</strong>
+                            <strong>Carlos Hernández</strong>
                         </h1>
                         <hr>
                     </div>
-                    
+
                     <div class="col-lg-12 my-auto">
-                        <button class="btn btn-primary btn-xl" type="button" onclick="window.location.href='home.html'">Enter now</button><br>
+                        <button class="btn btn-primary btn-xl" type="button" onclick="window.location.href = 'home.html'">Enter now</button><br>
                         <!--<div id="mc_embed_signup">
                             <form action="https://carlosshb.us18.list-manage.com/subscribe/post?u=96e4ff150fd6480d4706678f2&amp;id=db8574bb7e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
-                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                   <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_96e4ff150fd6480d4706678f2_db8574bb7e" tabindex="-1" value=""></div>
-                                    <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                                </div>
-                            </form>
-                        </div>-->
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_96e4ff150fd6480d4706678f2_db8574bb7e" tabindex="-1" value=""></div>
+                         <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                     </div>
+                 </form>
+             </div>-->
                     </div>
 
 
