Ready to go out!

--- a/complex.html
+++ b/complex.html
@@ -29,8 +29,8 @@
     </head>
 
     <body>
-        <!-- Navbar -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+       <!-- Navbar -->
+        <nav id ="nav" class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <div class="container">
 
                 <!-- Brand -->
@@ -63,6 +63,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="favorite.html">My favorite songs</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                My projects
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="complex.html">Complex calculator</a>
+                            </div>
+                        </li>
+
                     </ul>
 
                     <!-- Right -->
@@ -100,7 +109,7 @@
                 <div class="container">
                     <div class="row features-small mb-5 mt-3 wow fadeIn">
 
-                        <div class="col-md-4">
+                        <div class="col-md-6">
 
                             <div class="complex-number">
                                 <h4><b>Complex</b></h4>
@@ -117,7 +126,7 @@
                         </div>
 
 
-                        <div class="col-md-4">
+                        <div class="col-md-6">
 
                             <div>
                                 <h4><b>Result</b></h4>
@@ -139,7 +148,7 @@
                 <div class="container">
                     <div class="row features-small mb-5 mt-3 wow fadeIn">
 
-                        <div class="col-md-4">
+                        <div class="col-md-6">
 
                             <div class="complex-number">
                                 <h4><b>Complex</b></h4>
@@ -156,7 +165,7 @@
                         </div>
 
 
-                        <div class="col-md-4">
+                        <div class="col-md-6">
 
                             <div>
                                 <h4><b>Result</b></h4>
@@ -246,7 +255,7 @@
 
             <hr class="my-4">
 
-            <!-- Social icons -->
+           <!-- Social icons -->
             <div class="pb-4">
                 <h5>Follow me </h5>
 
@@ -256,6 +265,10 @@
 
                 <a href="https://twitter.com/OneMoreCarlos" target="_blank">
                     <i class="fa fa-twitter mr-3"></i>
+                </a>
+
+                <a href="https://medium.com/@charlesshb98" target="_blank">
+                    <i class="fa fa-medium mr-3"></i>
                 </a>
 
                 <a href="https://plus.google.com/u/0/114102298323708061224" target="_blank">
