--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <!-- Navbar -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+        <nav id ="nav" class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <div class="container">
 
                 <!-- Brand -->
@@ -56,7 +56,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">About me</a>
+                            <a class="nav-link" href="about.html">About me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="gallery.html" >Gallery</a>
@@ -64,6 +64,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="favorite.html">My favorite songs</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                My projects
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="complex.html">Complex calculator</a>
+                            </div>
+                        </li>
+
                     </ul>
 
                     <!-- Right -->
@@ -126,6 +135,10 @@
 
                 <a href="https://twitter.com/OneMoreCarlos" target="_blank">
                     <i class="fa fa-twitter mr-3"></i>
+                </a>
+
+                <a href="https://medium.com/@charlesshb98" target="_blank">
+                    <i class="fa fa-medium mr-3"></i>
                 </a>
 
                 <a href="https://plus.google.com/u/0/114102298323708061224" target="_blank">
