--- a/home.html
+++ b/home.html
@@ -69,7 +69,6 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="complex.html">Complex calculator</a>
-                                <div class="dropdown-divider"></div>
                             </div>
                         </li>
 
@@ -139,7 +138,7 @@
                             <h3 class="mb-3 font-weight-bold dark-grey-text">
                                 <strong>Know me a little more!</strong>
                             </h3>
-                            <p class="grey-text">Read about my life, my study line, the frameworks I've worked with, 
+                            <p class="grey-text">Read about my life, my education, the developer skills I have, 
                                 the courses I've made and more...</p>
 
                             <a href="about.html"  class="btn btn-primary btn-md">About Carlos
@@ -238,7 +237,7 @@
                             This calculator was made by me with knowledges adquired in my career 
                             and was made in order to ease such operations studying advanced subjects
                             such as Electric Circuits</p>
-                            <a href="gallery.html"class="btn btn-primary btn-md">Begin                               
+                            <a href="complex.html"class="btn btn-primary btn-md">Begin                               
 
                             </a>
 
@@ -277,6 +276,10 @@
 
                 <a href="https://twitter.com/OneMoreCarlos" target="_blank">
                     <i class="fa fa-twitter mr-3"></i>
+                </a>
+
+                <a href="https://medium.com/@charlesshb98" target="_blank">
+                    <i class="fa fa-medium mr-3"></i>
                 </a>
 
                 <a href="https://plus.google.com/u/0/114102298323708061224" target="_blank">
